name:                streamer
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jon Yurek
maintainer:          jyurek@thoughtbot.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Accum
                     , Run
  build-depends:       base >= 4 && < 5
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , bytestring
                     , transformers
                     , resourcet >= 1.1.4.1 && < 1.2
                     , wai >= 3.0.2.3 && < 3.1
                     , wai-conduit >= 3.0.0.2 && < 3.1
                     , uuid >= 1.3.8 && < 1.4

executable streamer
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 4.8
                     , streamer
                     , conduit >= 1.2.4 && < 1.3
                     , http-types >= 0.8.6 && < 0.9
                     , bytestring >= 0.10.4.0 && < 0.11
                     , wai >= 3.0.2.3 && < 3.1
                     , warp >= 3.0.5.1 && < 3.1
                     , conduit-extra >= 1.1.6.2 && < 1.2
                     , multipart >= 0.1.2 && < 0.2
                     , transformers >= 0.4.2.0 && < 0.4.3
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N


test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  build-depends:        base
                      , streamer
                      , hspec
                      , bytestring
